// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckAnswers renders CheckAnswers - no emergency 1`] = `
<React.Fragment>
  <Question
    text="Check your answers"
  />
  <h3>
    About you
  </h3>
  <Table>
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Name"
      value="Chan Singh"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Date of birth"
      value="1 January 1990"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Telephone number"
      value="87098908"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Email address"
      value="test@testerson.com"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Address"
      value={
        <AddressFormatted
          addressObj={
            Object {
              "addressId": "f2c8b89b-4b11-4557-93cb-9f846748bcba",
              "addressLine1": "Church Of Christ",
              "addressLine2": "Summer Lane",
              "county": "West Midlands",
              "postCode": "B19 2NN",
              "searchPostCode": "B19 2NN",
              "townOrCity": "Birmingham",
            }
          }
        />
      }
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Preferred method of contact"
      value="Email, Large print letter"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Ethnicity"
      value="Asian or Asian British - Indian"
    />
  </Table>
  <h3>
    Your requirements
  </h3>
  <Table>
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Problems accessing standard services"
      value="I cannot get to a bus stop, I cannot travel on a bus"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Reasons"
      value="I have limited mobility, I cannot travel without a companion or carer, Arthiritis"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="What conditions do you have?"
      value="Arthiritis"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Use of a mobility aid"
      value="I use a manual wheelchair, I use a walking frame"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Manual wheelchair"
      value="I cannot transfer"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Additional requirements"
      value="Extra requirement"
    />
  </Table>
  <h3>
    Now send your request
  </h3>
  <p>
    By submitting this enquiry you are confirming that, to the best of your knowledge, the details you are providing are correct.
  </p>
  <CheckboxContainer
    error={null}
  >
    <FieldError
      text={null}
    />
    <Checkbox
      fieldName="agreeRingAndRide"
      label={
        <span>
          Agree that you need to use Ring & Ride because you find it either impossible or difficult to use other forms of public transport. You will inform Ring & Ride if there is any change in your circumstances that affects your eligibility to use the service.
        </span>
      }
    />
    <Checkbox
      fieldName="agreeTermsAndConditions"
      label={
        <React.Fragment>
          Agree to the
           
          <a
            href="https://www.wmca.org.uk/policies"
            rel="noreferrer"
            target="_blank"
          >
            terms and conditions
          </a>
        </React.Fragment>
      }
    />
    <Checkbox
      fieldName="agreePrivacyPolicy"
      label={
        <React.Fragment>
          Agree to the
           
          <a
            href="https://www.wmca.org.uk/policies"
            rel="noreferrer"
            target="_blank"
          >
            privacy policy
          </a>
        </React.Fragment>
      }
    />
  </CheckboxContainer>
</React.Fragment>
`;

exports[`CheckAnswers renders CheckAnswers - register on behalf of someone else 1`] = `
<React.Fragment>
  <Question
    text="Check your answers"
  />
  <h3>
    About the applicant
  </h3>
  <Table>
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Name"
      value="Chan Singh"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Date of birth"
      value="1 January 1990"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Telephone number"
      value="87098908"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Email address"
      value="test@testerson.com"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Address"
      value={
        <AddressFormatted
          addressObj={
            Object {
              "addressId": "f2c8b89b-4b11-4557-93cb-9f846748bcba",
              "addressLine1": "Church Of Christ",
              "addressLine2": "Summer Lane",
              "county": "West Midlands",
              "postCode": "B19 2NN",
              "searchPostCode": "B19 2NN",
              "townOrCity": "Birmingham",
            }
          }
        />
      }
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Preferred method of contact"
      value="Email, Large print letter"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Ethnicity"
      value="Asian or Asian British - Indian"
    />
  </Table>
  <React.Fragment>
    <h3>
      Emergency Contact
    </h3>
    <Table>
      <CheckAnswerRow
        changeValueCallback={[Function]}
        label="Name"
        value="Test Testerson"
      />
      <CheckAnswerRow
        changeValueCallback={[Function]}
        label="Relationship to applicant"
        value="Carer"
      />
      <CheckAnswerRow
        changeValueCallback={[Function]}
        label="Telephone number"
        value="0800 555500"
      />
      <CheckAnswerRow
        changeValueCallback={[Function]}
        label="Email address"
        value="tester@testerson.com"
      />
      <CheckAnswerRow
        changeValueCallback={[Function]}
        label="Address"
        value={
          <AddressFormatted
            addressObj={
              Object {
                "addressId": "46091f33-ae00-4709-bbc8-38145f2233b1",
                "addressLine1": "West Midlands Combined Authority",
                "addressLine2": "16 Summer Lane",
                "county": "West Midlands",
                "postCode": "B19 3SD",
                "searchPostCode": "B19 3SD",
                "townOrCity": "Birmingham",
              }
            }
          />
        }
      />
    </Table>
  </React.Fragment>
  <h3>
    Applicant requirements
  </h3>
  <Table>
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Problems accessing standard services"
      value="They cannot get to a bus stop, They cannot travel on a bus"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Reasons"
      value="They have limited mobility, They cannot travel without a companion or carer, Arthiritis"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="What conditions do they have?"
      value="Arthiritis"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Use of a mobility aid"
      value="They use a manual wheelchair, They use a walking frame"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Manual wheelchair"
      value="They cannot transfer"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Additional requirements"
      value="Extra requirement"
    />
  </Table>
  <h3>
    Now send your request
  </h3>
  <p>
    By submitting this enquiry you are confirming that, to the best of your knowledge, the details you are providing are correct.
  </p>
  <CheckboxContainer
    error={null}
  >
    <FieldError
      text={null}
    />
    <Checkbox
      fieldName="agreeRingAndRide"
      label={
        <span>
          Agree that you need to use Ring & Ride because you find it either impossible or difficult to use other forms of public transport. You will inform Ring & Ride if there is any change in your circumstances that affects your eligibility to use the service.
        </span>
      }
    />
    <Checkbox
      fieldName="agreeTermsAndConditions"
      label={
        <React.Fragment>
          Agree to the
           
          <a
            href="https://www.wmca.org.uk/policies"
            rel="noreferrer"
            target="_blank"
          >
            terms and conditions
          </a>
        </React.Fragment>
      }
    />
    <Checkbox
      fieldName="agreePrivacyPolicy"
      label={
        <React.Fragment>
          Agree to the
           
          <a
            href="https://www.wmca.org.uk/policies"
            rel="noreferrer"
            target="_blank"
          >
            privacy policy
          </a>
        </React.Fragment>
      }
    />
  </CheckboxContainer>
</React.Fragment>
`;

exports[`CheckAnswers renders CheckAnswers correctly 1`] = `
<React.Fragment>
  <Question
    text="Check your answers"
  />
  <h3>
    About you
  </h3>
  <Table>
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Name"
      value="Chan Singh"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Date of birth"
      value="1 January 1990"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Telephone number"
      value="87098908"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Email address"
      value="test@testerson.com"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Address"
      value={
        <AddressFormatted
          addressObj={
            Object {
              "addressId": "f2c8b89b-4b11-4557-93cb-9f846748bcba",
              "addressLine1": "Church Of Christ",
              "addressLine2": "Summer Lane",
              "county": "West Midlands",
              "postCode": "B19 2NN",
              "searchPostCode": "B19 2NN",
              "townOrCity": "Birmingham",
            }
          }
        />
      }
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Preferred method of contact"
      value="Email, Large print letter"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Ethnicity"
      value="Asian or Asian British - Indian"
    />
  </Table>
  <React.Fragment>
    <h3>
      Emergency Contact
    </h3>
    <Table>
      <CheckAnswerRow
        changeValueCallback={[Function]}
        label="Name"
        value="Test Testerson"
      />
      <CheckAnswerRow
        changeValueCallback={[Function]}
        label="Relationship to you"
        value="Carer"
      />
      <CheckAnswerRow
        changeValueCallback={[Function]}
        label="Telephone number"
        value="0800 555500"
      />
      <CheckAnswerRow
        changeValueCallback={[Function]}
        label="Email address"
        value="tester@testerson.com"
      />
      <CheckAnswerRow
        changeValueCallback={[Function]}
        label="Address"
        value={
          <AddressFormatted
            addressObj={
              Object {
                "addressId": "46091f33-ae00-4709-bbc8-38145f2233b1",
                "addressLine1": "West Midlands Combined Authority",
                "addressLine2": "16 Summer Lane",
                "county": "West Midlands",
                "postCode": "B19 3SD",
                "searchPostCode": "B19 3SD",
                "townOrCity": "Birmingham",
              }
            }
          />
        }
      />
    </Table>
  </React.Fragment>
  <h3>
    Your requirements
  </h3>
  <Table>
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Problems accessing standard services"
      value="I cannot get to a bus stop, I cannot travel on a bus"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Reasons"
      value="I have limited mobility, I cannot travel without a companion or carer, Arthiritis"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="What conditions do you have?"
      value="Arthiritis"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Use of a mobility aid"
      value="I use a manual wheelchair, I use a walking frame"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Manual wheelchair"
      value="I cannot transfer"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Additional requirements"
      value="Extra requirement"
    />
  </Table>
  <h3>
    Now send your request
  </h3>
  <p>
    By submitting this enquiry you are confirming that, to the best of your knowledge, the details you are providing are correct.
  </p>
  <CheckboxContainer
    error={null}
  >
    <FieldError
      text={null}
    />
    <Checkbox
      fieldName="agreeRingAndRide"
      label={
        <span>
          Agree that you need to use Ring & Ride because you find it either impossible or difficult to use other forms of public transport. You will inform Ring & Ride if there is any change in your circumstances that affects your eligibility to use the service.
        </span>
      }
    />
    <Checkbox
      fieldName="agreeTermsAndConditions"
      label={
        <React.Fragment>
          Agree to the
           
          <a
            href="https://www.wmca.org.uk/policies"
            rel="noreferrer"
            target="_blank"
          >
            terms and conditions
          </a>
        </React.Fragment>
      }
    />
    <Checkbox
      fieldName="agreePrivacyPolicy"
      label={
        <React.Fragment>
          Agree to the
           
          <a
            href="https://www.wmca.org.uk/policies"
            rel="noreferrer"
            target="_blank"
          >
            privacy policy
          </a>
        </React.Fragment>
      }
    />
  </CheckboxContainer>
</React.Fragment>
`;

exports[`CheckAnswers renders CheckAnswers with an error if present 1`] = `
<React.Fragment>
  <Question
    text="Check your answers"
  />
  <h3>
    About you
  </h3>
  <Table>
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Name"
      value="Chan Singh"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Date of birth"
      value="1 January 1990"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Telephone number"
      value="87098908"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Email address"
      value="test@testerson.com"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Address"
      value={
        <AddressFormatted
          addressObj={
            Object {
              "addressId": "f2c8b89b-4b11-4557-93cb-9f846748bcba",
              "addressLine1": "Church Of Christ",
              "addressLine2": "Summer Lane",
              "county": "West Midlands",
              "postCode": "B19 2NN",
              "searchPostCode": "B19 2NN",
              "townOrCity": "Birmingham",
            }
          }
        />
      }
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Preferred method of contact"
      value="Email, Large print letter"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Ethnicity"
      value="Asian or Asian British - Indian"
    />
  </Table>
  <React.Fragment>
    <h3>
      Emergency Contact
    </h3>
    <Table>
      <CheckAnswerRow
        changeValueCallback={[Function]}
        label="Name"
        value="Test Testerson"
      />
      <CheckAnswerRow
        changeValueCallback={[Function]}
        label="Relationship to you"
        value="Carer"
      />
      <CheckAnswerRow
        changeValueCallback={[Function]}
        label="Telephone number"
        value="0800 555500"
      />
      <CheckAnswerRow
        changeValueCallback={[Function]}
        label="Email address"
        value="tester@testerson.com"
      />
      <CheckAnswerRow
        changeValueCallback={[Function]}
        label="Address"
        value={
          <AddressFormatted
            addressObj={
              Object {
                "addressId": "46091f33-ae00-4709-bbc8-38145f2233b1",
                "addressLine1": "West Midlands Combined Authority",
                "addressLine2": "16 Summer Lane",
                "county": "West Midlands",
                "postCode": "B19 3SD",
                "searchPostCode": "B19 3SD",
                "townOrCity": "Birmingham",
              }
            }
          />
        }
      />
    </Table>
  </React.Fragment>
  <h3>
    Your requirements
  </h3>
  <Table>
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Problems accessing standard services"
      value="I cannot get to a bus stop, I cannot travel on a bus"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Reasons"
      value="I have limited mobility, I cannot travel without a companion or carer, Arthiritis"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="What conditions do you have?"
      value="Arthiritis"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Use of a mobility aid"
      value="I use a manual wheelchair, I use a walking frame"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Manual wheelchair"
      value="I cannot transfer"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Additional requirements"
      value="Extra requirement"
    />
  </Table>
  <h3>
    Now send your request
  </h3>
  <p>
    By submitting this enquiry you are confirming that, to the best of your knowledge, the details you are providing are correct.
  </p>
  <CheckboxContainer
    error="Required"
  >
    <FieldError
      text="Required"
    />
    <Checkbox
      fieldName="agreeRingAndRide"
      label={
        <span>
          Agree that you need to use Ring & Ride because you find it either impossible or difficult to use other forms of public transport. You will inform Ring & Ride if there is any change in your circumstances that affects your eligibility to use the service.
        </span>
      }
    />
    <Checkbox
      fieldName="agreeTermsAndConditions"
      label={
        <React.Fragment>
          Agree to the
           
          <a
            href="https://www.wmca.org.uk/policies"
            rel="noreferrer"
            target="_blank"
          >
            terms and conditions
          </a>
        </React.Fragment>
      }
    />
    <Checkbox
      fieldName="agreePrivacyPolicy"
      label={
        <React.Fragment>
          Agree to the
           
          <a
            href="https://www.wmca.org.uk/policies"
            rel="noreferrer"
            target="_blank"
          >
            privacy policy
          </a>
        </React.Fragment>
      }
    />
  </CheckboxContainer>
</React.Fragment>
`;
